Сделан справочник по кодам стран

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
             android:label="@string/city"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".logic.settings.SettingsActivity"
+            android:label="@string/settings"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
